translation-tool/inputs/source_meta/objects/HSvc_ChronicSiteHistory__c.object
<CustomObject>
    <description>This object will store the history of chronic cases created.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chronic Site Histories</relationshipLabel>
        <relationshipName>Chronic_Site_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chronic_Rule_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chronic Rules</label>
        <referenceTo>HSvc_ChronicRule__c</referenceTo>
        <relationshipLabel>Chronic Site Histories</relationshipLabel>
        <relationshipName>Chronic_Site_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Chronic Site Histories</relationshipLabel>
        <relationshipName>Chronic_Site_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Chronic_Rules__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chronic Rules</label>
        <referenceTo>HSvc_ChronicRules__c</referenceTo>
        <relationshipLabel>Chronic Site Histories</relationshipLabel>
        <relationshipName>Chronic_Site_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hsvc_CaseCount__c</fullName>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hsvc_ChronicBeginDate__c</fullName>
        <label>Chronic Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hsvc_ChronicCaseCount__c</fullName>
        <label>Chronic Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hsvc_ChronicCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chronic Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Chronic Site Histories</relationshipLabel>
        <relationshipName>Chronic_Site_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hsvc_ChronicEndDate__c</fullName>
        <label>Chronic End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hsvc_isHistorical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isHistorical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Consumer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Consumer</label>
        <type>Checkbox</type>
    </fields>
    <label>Chronic Site History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>HSvc_Asset__c</columns>
        <columns>Hsvc_ChronicCaseCount__c</columns>
        <columns>Hsvc_CaseCount__c</columns>
        <columns>Hsvc_ChronicBeginDate__c</columns>
        <columns>Hsvc_ChronicCase__c</columns>
        <columns>Hsvc_isHistorical__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSH-{0000}</displayFormat>
        <label>Chronic Site History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chronic Site Histories</pluralLabel>
    <recordTypes>
        <fullName>Account_History_Records</fullName>
        <active>true</active>
        <description>To create Account records which are made chronic</description>
        <label>Account History Records</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_History_Record</fullName>
        <active>true</active>
        <description>To create Asset records which are made chronic</description>
        <label>Asset History Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>